# aiden

./: .env  .gitignore  Dockerfile  build.sh  main.py  pyproject.toml  sample.py
notebooks/: main.ipynb  segm.ipynb  tooth.ipynb  view.ipynb  yolo.ipynb
runs/pose/train/: args.yaml
scripts/: predict.py  prepare_data.py  train.py
src/: auth.py  backend.py  checkcoco.py  cvat2coco.py  db.py  frontend.py  inference.py  notebook.py  predict.py  prepare.py  test_prepare.py  train.py  user.py  vis_coco.py  vis_yolo.py
web/: web.py
