[project]
name = "aiden"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.4",
    "google-pasta>=0.2.0",
    "importlib>=1.0.4",
    "jinja2>=3.1.4",
    "jupyter-server>=2.14.2",
    "monai>=1.4.0",
    "passlib>=1.7.4",
    "pillow>=11.0.0",
    "polars>=1.14.0",
    "pycocotools>=2.0.8",
    "pydantic>=2.9.2",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "shapely>=2.0.6",
    "solara>=1.41.0",
    "sqlmodel>=0.0.22",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "typer>=0.13.1",
    "ultralytics>=8.3.28",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

